fixed breaks in wide screens

--- a/stylesheet_v7.css
+++ b/stylesheet_v7.css
@@ -106,6 +106,11 @@ body {
 			text-align: left;
 		}
 
+		.about-break {
+			flex-basis: 100%;
+			height: 0;
+		}
+
 		.about-item {
 			display: flex;
 			flex-wrap: wrap;
@@ -165,7 +170,7 @@ body {
 	/* Footer */
 
 		.footer {
-			margin-top: 0px;
+			margin-top: 0%;
 			padding: 18px;
 			text-align: center;
 		}
